<resources>
    <string name="app_name">Datomatic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Mobile number</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="title_activity_basic">BasicActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="tab_text_1">Prescriptions</string>
    <string name="tab_text_2">Reports</string>
    <string name="home">Home</string>


    <string name="no_internet">No Internet, check connection.</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="row1Surname">Mohammad</string>
    <string name="row2Name">Dave</string>
    <string name="row2Age">45</string>
    <string name="row2Surname">Smith</string>
    <string name="row3Name">Jason</string>
    <string name="row3Age">67</string>
    <string name="row3Surname">William</string>
    <string name="row1Name" translatable="false">Ali</string>
    <string name="row1Age" translatable="false">51</string>

    <string name="col1" translatable="false">RxNORM code</string>
    <string name="col2" translatable="false">Medication Name</string>
    <string name="col3" translatable="false">Dosage (in mg)</string>
    <string name="col4" translatable="false">Route</string>
    <string name="col5" translatable="false">Frequency</string>

    <string name="description">Prescription</string>
    <string name="visit_site">Visit site</string>
    <string name="about_us">About Us</string>

</resources>