<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.details.DetailsFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/header_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/icon_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="9dp"
                    android:layout_marginTop="18dp"
                    android:src="@drawable/ic_arrow_back"
                    app:layout_constraintTop_toTopOf= "parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/icon_share"
                    android:clickable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="17dp"
                    android:layout_marginTop="18dp"
                    android:src="@drawable/ic_share_2"
                    app:layout_constraintTop_toTopOf= "parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="ContentDescription"
                    android:focusable="true" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/patient_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="17dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/arial_rounded_mt_bold"
            android:textSize="14sp"
            android:text="Name:"
            android:textColor="@color/appcolor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_card"
            />
        <TextView
            android:id="@+id/patient_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="17dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/arial_rounded_mt_bold"
            android:textSize="14sp"
            android:text="Age:"
            android:textColor="@color/appcolor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/patient_name"
            />
        <TextView
            android:id="@+id/patient_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="17dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/arial_rounded_mt_bold"
            android:textSize="14sp"
            android:text="PhoneNumber:"
            android:textColor="@color/appcolor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/patient_age"
            />
        <TextView
            android:id="@+id/patient_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="17dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/arial_rounded_mt_bold"
            android:textSize="14sp"
            android:text="Gender:"
            android:textColor="@color/appcolor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/patient_phone"
            />



        <TextView
            android:id="@+id/patient_remark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="17dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/arial_rounded_mt_bold"
            android:textSize="14sp"
            android:text="Remark:"
            android:textColor="@color/appcolor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/patient_gender"
            />

        <TextView
            android:id="@+id/patient_created"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="17dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/arial_rounded_mt_bold"
            android:textSize="14sp"
            android:text="Created:"
            android:textColor="@color/appcolor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/patient_remark"
            />


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Table"
            app:layout_constraintTop_toBottomOf="@id/patient_created"
            android:background="@android:color/white"
            android:showDividers="middle|beginning|end"
            android:stretchColumns="*"
            android:padding="5dp"
            android:layout_margin="10dp">

            <!-- Table Heading -->

                <TableRow
                    android:background="@color/appcolor"
                    android:layout_height="wrap_content"

                    >

                    <TextView

                        android:id="@+id/rxNORM_code"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/col1"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:padding="5dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        />

                    <TextView
                        android:id="@+id/medication_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/col2"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:padding="5dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        />
                    <TextView
                        android:id="@+id/dosage"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/col3"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:padding="5dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        />
                    <TextView
                        android:id="@+id/route"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/col4"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:padding="5dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        />
                    <TextView
                        android:id="@+id/frequency"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/col5"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:padding="5dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        />


                </TableRow>





            <!-- Table Data -->



        </TableLayout>


        <ProgressBar
            android:id="@+id/progress_bar"
            style="?attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:indeterminate="true"
            android:indeterminateTint="@color/appcolor"
            android:indeterminateTintMode="src_atop"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>